[tool.poetry]
name = "origami"
version = "0.1.0"
description = "Origami sphinx theme"
authors = ["Bartek Sokorski <b.sokorski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
poethepoet = "^0.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
